--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="./css/base.css"/>
     <link rel="stylesheet" href="./css/common.css"/>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
     <!--快捷导航模块 start-->
@@ -119,5 +120,280 @@
         </div>
     </nav>
     <!--nav模块end-->
+
+    <!--main模块start-->
+    <div class="w">
+        <div class="main">
+            <div class="focus">
+                <ul>
+                    <li>
+                        <img src="./images/banner_bg.png" alt="">
+                    </li>
+                </ul>
+            </div>
+            <div class="newsflash">
+                <div class="news">
+                    <div class="news-hd">
+                        <h5>品优购快报</h5>
+                        <a href="#" class="more">更多</a>
+                    </div>
+                    <div class="news-bd">
+                        <ul>
+                            <li><a href="#"><strong>[重磅]</strong> 他来了他来了！他来了他来了！他来了他来了！</a></li>
+                            <li><a href="#"><strong>[重磅]</strong> 他来了他来了！</a></li>
+                            <li><a href="#"><strong>[重磅]</strong> 他来了他来了！</a></li>
+                            <li><a href="#"><strong>[重磅]</strong> 他来了他来了！</a></li>
+                            <li><a href="#"><strong>[重磅]</strong> 他来了他来了！</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="lifeservice">
+                    <ul>
+                        <li>
+                            <a href="#" class="item">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="item">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="item">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="item">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="item">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="item">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="item">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="item">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="item">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="item">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="item">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="item">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="bargin">
+                    <img src="./images/ad.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--main模块end-->
+
+    <!--推荐模块start-->
+    <div class="recom w">
+        <div class="recom_hd">
+            <a href="#">
+                <img src="./images/clock.png" alt="">
+                <br>
+                今日推荐
+            </a>
+            
+        </div>
+        <div class="recom_bd">
+            <ul>
+                <li><a href="#"><img src="./images/recommend01.png" alt=""></a></li>
+                <li><a href="#"><img src="./images/recommend01.png" alt=""></a></li>
+                <li><a href="#"><img src="./images/recommend01.png" alt=""></a></li>
+                <li><a href="#"><img src="./images/recommend01.png" alt=""></a></li>
+            </ul>
+        </div>
+    </div>
+    <!--推荐模块end-->
+
+    <!--楼层区域start-->
+    <div class="floor">
+        <div class="w jiadian">
+            <div class="box-hd">
+                <h3>家用电器</h3>
+                <div class="tab_list">
+                    <ul>
+                        <li><a href="#" class="style_red">热门</a>|</li>
+                        <li><a href="#">大家电</a>|</li>
+                        <li><a href="#">生活电器</a>|</li>
+                        <li><a href="#">厨房电器</a>|</li>
+                        <li><a href="#">个护健康</a>|</li>
+                        <li><a href="#">应季电器</a>|</li>
+                        <li><a href="#">空气/净水</a>|</li>
+                        <li><a href="#">新奇特</a>|</li>
+                        <li><a href="#">高端电器</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="box-bd">
+                <div class="tab_content">
+                    <div class="tab_list_item">
+                        <div class="col_210">
+                            <ul>
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">4K电视</a></li>
+                                <li><a href="#">空气净化器</a></li>
+                                <li><a href="#">IH电饭煲</a></li>
+                                <li><a href="#">滚筒洗衣机</a></li>
+                                <li><a href="#">电热水器</a></li>
+                            </ul>
+                            <a href="#">
+                                <img src="./images/tv.png" alt="">
+                            </a>
+                        </div>
+                        <div class="col_329">2</div>
+                        <div class="col_221">3</div>
+                        <div class="col_221">4</div>
+                        <div class="col_219">5</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--漏测区域end-->
+
+    <!--底部模块的制作start-->
+        <footer class="footer">
+            <div class="w">
+                <div class="mod_service">
+                    <ul>
+                        <li>
+                            <h5></h5>
+                            <div class="service_txt">
+                                <h4>正品保障</h4>
+                                <p>正品保障，提供发票</p>
+                            </div>
+                        </li>
+                        <li>
+                            <h5></h5>
+                            <div class="service_txt">
+                                <h4>正品保障</h4>
+                                <p>正品保障，提供发票</p>
+                            </div>
+                        </li>
+                        <li>
+                            <h5></h5>
+                            <div class="service_txt">
+                                <h4>正品保障</h4>
+                                <p>正品保障，提供发票</p>
+                            </div>
+                        </li>
+                        <li>
+                            <h5></h5>
+                            <div class="service_txt">
+                                <h4>正品保障</h4>
+                                <p>正品保障，提供发票</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mod_help">
+                    <dl>
+                        <dt>服务指南</dt>
+                        <dd><a href="#">购物流程</a></dd>
+                        <dd><a href="#">会员介绍</a></dd>
+                        <dd><a href="#">生活旅行/团购</a></dd>
+                        <dd><a href="#">常见问题</a></dd>
+                        <dd><a href="#">大家电</a></dd>
+                        <dd><a href="#">联系客服</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>服务指南</dt>
+                        <dd><a href="#">购物流程</a></dd>
+                        <dd><a href="#">会员介绍</a></dd>
+                        <dd><a href="#">生活旅行/团购</a></dd>
+                        <dd><a href="#">常见问题</a></dd>
+                        <dd><a href="#">大家电</a></dd>
+                        <dd><a href="#">联系客服</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>服务指南</dt>
+                        <dd><a href="#">购物流程</a></dd>
+                        <dd><a href="#">会员介绍</a></dd>
+                        <dd><a href="#">生活旅行/团购</a></dd>
+                        <dd><a href="#">常见问题</a></dd>
+                        <dd><a href="#">大家电</a></dd>
+                        <dd><a href="#">联系客服</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>服务指南</dt>
+                        <dd><a href="#">购物流程</a></dd>
+                        <dd><a href="#">会员介绍</a></dd>
+                        <dd><a href="#">生活旅行/团购</a></dd>
+                        <dd><a href="#">常见问题</a></dd>
+                        <dd><a href="#">大家电</a></dd>
+                        <dd><a href="#">联系客服</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>服务指南</dt>
+                        <dd><a href="#">购物流程</a></dd>
+                        <dd><a href="#">会员介绍</a></dd>
+                        <dd><a href="#">生活旅行/团购</a></dd>
+                        <dd><a href="#">常见问题</a></dd>
+                        <dd><a href="#">大家电</a></dd>
+                        <dd><a href="#">联系客服</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>帮助中心</dt>
+                        <dd>
+                            <img src="images/erweima.png" alt="">
+                            品优购客户端
+                        </dd>
+                    </dl>
+                </div>
+                <div class="copyright">
+                    地址：北京市昌平区建材城西路金燕龙办公楼一楼 邮编：100096 电话：
+                    400-618-4000 传真：010-82935100 邮箱：zhanghj+itcast.cn <br/>
+                    京ICP备08001421号京公网安备110108007702 
+                </div>
+            </div>
+        </footer>
+    <!--底部模块的制作end-->
 </body>
 </html>
